kubernetes/yaml/service-mesh/envoy/dynamic-eds/envoy.yaml
node:
  cluster: envoyserver
  id: bj-id

admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901 

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000 
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager 
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: http
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router 
          route_config:
            name: local_service 
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: target_cluster

  clusters:
  - name: target_cluster 
    connect_timeout: 0.25s
    type: EDS 
    #dns_lookup_family: V4_ONLY
    eds_cluster_config:
      service_name: example_proxy_cluster # 替换为你的服务名称
      eds_config:
        api_config_source:
          api_type: REST
          cluster_names: [some_xds_cluster]
          refresh_delay: 5s

  - name: some_xds_cluster
    type: STATIC
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: some_xds_cluster 
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1 
                port_value: 9999
